@@ -7,7 +7,9 @@ Copyright: xmlBlaster.org, see xmlBlaster-LICENSE file
 package org.xmlBlaster.engine.query.plugins;
 
 import java.util.ArrayList;
+import java.util.HashSet;
 import java.util.Map;
+import java.util.Set;
 
 import java.util.logging.Logger;
 import java.util.logging.Level;
@@ -26,43 +28,69 @@ import org.xmlBlaster.util.queue.I_Queue;
 import org.xmlBlaster.util.queue.I_QueueSizeListener;
 import org.xmlBlaster.util.queuemsg.MsgQueueEntry;
 
+import edu.emory.mathcs.backport.java.util.concurrent.CountDownLatch;
+import edu.emory.mathcs.backport.java.util.concurrent.TimeUnit;
+
 /**
- * QueueQueryPlugin
+ * Each TopicHandler/SessionInfo or SubjectInfo instance creates its own instance of this plugin. 
  * @see <a href="http://www.xmlBlaster.org/xmlBlaster/doc/requirements/engine.qos.queryspec.html">The engine.qos.queryspec requirement</a>
  * @see <a href="http://www.xmlBlaster.org/xmlBlaster/doc/requirements/engine.qos.queryspec.QueueQuery.html">The engine.qos.queryspec.QueueQuery requirement</a>
  * @author <a href="mailto:laghi@swissinfo.org">Michele Laghi</a>
  */
 public class QueueQueryPlugin implements I_Query, I_QueueSizeListener {
+   
+   /** Helper container */
+   class WaitingQuery {
+      /** 
+       * The maximum number of entries for which to wait. If negative
+       * no restriction is given, so the the other limitations count.
+       */
+      int maxEntries;
+      /**
+       * The maximum number of bytes which need to be in the queue before
+       * it will continue. If negative no restriction is given.
+       */
+      long maxSize;
+      CountDownLatch startSignal = new CountDownLatch(1);
+      
+      public WaitingQuery(int maxEntries, long maxSize) {
+         super();
+         this.maxEntries = maxEntries;
+         this.maxSize = maxSize;
+      }
+   }
 
    private final static String ME = "QueueQueryPlugin";
    private Global global;
    private static Logger log = Logger.getLogger(QueueQueryPlugin.class.getName());
-   private int maxEntries;
-   private long maxSize;
+   private Set waitingThreads = new HashSet();
+   //private int maxEntries;
+   //private long maxSize;
    
    public QueueQueryPlugin(Global global) {
       this.global = global;
 
    }
 
+   private WaitingQuery[] getWaitingQueries() {
+      synchronized (this.waitingThreads) {
+         return (WaitingQuery[])this.waitingThreads.toArray(new WaitingQuery[this.waitingThreads.size()]);
+      }
+   }
 
    /**
     * If no restriction is given, i.e. if both maxEntries and maxBytes is negative,
     * then it will wait.
     * 
-    * @param maxEntries the maximum number of entries for which to wait. If negative
-    *        no restriction is given, so the the other limitations count.
-    * @param maxBytes the maximum number of bytes which need to be in the queue before
-    *        it will continue. If negative no restriction is given.
     * @return true if it has to wait, false if there are already sufficently entries 
     *         in the queue.
     */
-   private final boolean checkIfNeedsWaiting(int entriesInQueue, long bytesInQueue, int maxEntries, long maxBytes) {
-      if (maxEntries > 0) {
-         if (entriesInQueue >= maxEntries) return false;
+   private final boolean checkIfNeedsWaiting(int entriesInQueue, long bytesInQueue, WaitingQuery wq) {
+      if (wq.maxEntries > 0) {
+         if (entriesInQueue >= wq.maxEntries) return false;
       }
-      if (maxBytes > 0) {
-         if (bytesInQueue >= maxBytes) return false;
+      if (wq.maxSize > 0) {
+         if (bytesInQueue >= wq.maxSize) return false;
       }
       return true;
    }
@@ -72,7 +100,8 @@ public class QueueQueryPlugin implements I_Query, I_QueueSizeListener {
     * are specified in the qos, and more precisely in the QuerySpecQos.
     * @param source must be an I_Queue implementation (can not be null).
     * @param query must not be null, e.g.
-    * "maxEntries=3&maxSize=1000&consumable=true&waitingDelay=1000"      
+    * "maxEntries=3&maxSize=1000&consumable=true&waitingDelay=1000"
+    * for example from qosData.getQuerySpecArr()[0].getQuery().getQuery()     
     */
    public MsgUnit[] query(Object source, String query) throws XmlBlasterException {
       //if (log.isLoggable(Level.FINER)) log.call(ME, "query for '" + keyData.getOid() + "'");
@@ -85,33 +114,21 @@ public class QueueQueryPlugin implements I_Query, I_QueueSizeListener {
          
       I_Queue queue = (I_Queue)source;         
 
-      this.maxEntries = 1;
-      this.maxSize = -1L;
+
+      int maxEntries = 1;
+      long maxSize = -1L;
       boolean consumable = false;
       long waitingDelay = 0L; // no wait is default
-      
-      /*
-      QuerySpecQos[] querySpecs = qosData.getQuerySpecArr();
-      QuerySpecQos querySpec = null;
-      if (querySpecs != null) {
-         for (int i=0; i < querySpecs.length; i++) {
-            if (querySpecs[i].getType().equals("QueueQuery")) {
-               querySpec = querySpecs[i];
-               break;
-            }
-         }
-      }
-      */
       
       // get the query properties
       //if (querySpec.getQuery() != null) query = querySpec.getQuery().getQuery();
       // "maxEntries=3&maxSize=1000&consumable=true&waitingDelay=1000"      
       Map props = StringPairTokenizer.parseToStringClientPropertyPairs(query, "&", "=");
       ClientProperty prop = (ClientProperty)props.get("maxEntries");
-      if (prop != null) this.maxEntries = prop.getIntValue();
+      if (prop != null) maxEntries = prop.getIntValue();
       prop = (ClientProperty)props.get("maxSize");
-      if (prop != null) this.maxSize = prop.getLongValue();
-      if (this.maxSize > -1L) {
+      if (prop != null) maxSize = prop.getLongValue();
+      if (maxSize > -1L) {
          log.warning(" Query specification of maxSize is not implemented, please use the default value -1 or leave it untouched: '" + query + "'");
          throw new XmlBlasterException(this.global, ErrorCode.USER_ILLEGALARGUMENT, ME, "Query specification of maxSize is not implemented, please use the default value -1 or leave it untouched");
       }
@@ -121,7 +138,7 @@ public class QueueQueryPlugin implements I_Query, I_QueueSizeListener {
       if (prop != null) waitingDelay = prop.getLongValue();
 
       if (log.isLoggable(Level.FINE)) 
-      log.fine("query: waitingDelay='" + waitingDelay + "' consumable='" + consumable + "' maxEntries='" + this.maxEntries + "' maxSize='" + this.maxSize + "'");
+      log.fine("query: waitingDelay='" + waitingDelay + "' consumable='" + consumable + "' maxEntries='" + maxEntries + "' maxSize='" + maxSize + "'");
       
       if (waitingDelay != 0L) {
          if (log.isLoggable(Level.FINE)) log.fine("query: waiting delay is " + waitingDelay);
@@ -129,32 +146,41 @@ public class QueueQueryPlugin implements I_Query, I_QueueSizeListener {
             log.warning("If you specify a blocking get you must also specify a maximum size or maximum number of entries to retreive, otherwise specify non-blocking by setting 'waitingDelay' to zero, query is illegal: '" + query + "'");
             throw new XmlBlasterException(this.global, ErrorCode.USER_ILLEGALARGUMENT, ME, "If you specify a blocking get you must also specify a maximum size or maximum number of entries to retreive, otherwise specify non-blocking by setting 'waitingDelay' to zero");
          }
-         if (checkIfNeedsWaiting((int)queue.getNumOfEntries(), queue.getNumOfBytes(), maxEntries, maxSize)) {
+         
+         WaitingQuery wq = new WaitingQuery(maxEntries, maxSize);
+         
+         if (checkIfNeedsWaiting((int)queue.getNumOfEntries(), queue.getNumOfBytes(), wq)) {
             if (log.isLoggable(Level.FINE)) log.fine("query: going to wait due to first check");
-            synchronized(this) {
-            //synchronized(queue) {
-               try {
-                  queue.addQueueSizeListener(this);
-                  if (checkIfNeedsWaiting((int)queue.getNumOfEntries(), queue.getNumOfBytes(), maxEntries, maxSize)) {
-                     if (log.isLoggable(Level.FINE)) log.fine("query: going to wait due to second check (inside sync now)");
-                     try {
-                        if (waitingDelay < 0L) this.wait();
-                        else this.wait(waitingDelay);
-                        if (log.isLoggable(Level.FINE)) log.fine("did not wake up after waiting");
-                     }
-                     catch (InterruptedException ex) {
-                        if (log.isLoggable(Level.FINE)) log.fine("just waked up after waiting for incoming entries");
-                     }
-                  }
+            try {
+               synchronized (this.waitingThreads) {
+                  this.waitingThreads.add(wq);
                }
-               finally {
-                  try {
-                     queue.removeQueueSizeListener(this);
-                     if (log.isLoggable(Level.FINE)) log.fine("query: removed myself as a QueueSizeListener");
+               queue.addQueueSizeListener(this);
+               boolean timedOut = false;
+               try {
+                  if (waitingDelay < 0L)
+                     wq.startSignal.await();
+                  else 
+                     timedOut = !wq.startSignal.await(waitingDelay, TimeUnit.MILLISECONDS);
+                  if (log.isLoggable(Level.FINE)) log.fine("just waked up after waiting for incoming entries, timedOut=" + timedOut);
+               }
+               catch (InterruptedException ex) {
+                  if (log.isLoggable(Level.FINE)) log.fine("just waked up because of interrupt: " + ex.toString());
+               }
+            }
+            catch (Throwable e) {
+               log.severe("Can't handle query: " + e.toString());
+            }
+            finally {
+               try {
+                  synchronized (this.waitingThreads) {
+                     this.waitingThreads.remove(wq);
                   }
-                  catch (Throwable ex) {
-                     if (log.isLoggable(Level.FINE)) log.fine("query: exception occurred when removing the QueueSizeListener from the queue");
-                  }
+                  queue.removeQueueSizeListener(this);
+                  if (log.isLoggable(Level.FINE)) log.fine("query: removed myself as a QueueSizeListener");
+               }
+               catch (Throwable ex) {
+                  log.severe("query: exception occurred when removing the QueueSizeListener from the queue");
                }
             }
          }
@@ -198,11 +224,11 @@ public class QueueQueryPlugin implements I_Query, I_QueueSizeListener {
     */
    public void changed(I_Queue queue, long numEntries, long numBytes, boolean isShutdown) {
       if (log.isLoggable(Level.FINER)) log.finer("changed numEntries='" + numEntries + "' numBytes='" + numBytes + "'");
-      if (isShutdown || !checkIfNeedsWaiting((int)numEntries, numBytes, this.maxEntries, this.maxSize)) {
-         if (log.isLoggable(Level.FINE)) log.fine("changed going to notify");
-         synchronized(this) {
-         //synchronized(queue) {
-            this.notify();
+      WaitingQuery[] queries = getWaitingQueries();
+      for (int i=0; i<queries.length; i++) {
+         if (isShutdown || !checkIfNeedsWaiting((int)numEntries, numBytes, queries[i])) {
+            if (log.isLoggable(Level.FINE)) log.fine("changed going to notify");
+            queries[i].startSignal.countDown();
          }
       }
    }
